# cryptobot

./: .env.example  .gitignore  Cargo.toml
config/: default.toml
src/: config.rs  lib.rs  main.rs
src/exchange/: binance.rs  mod.rs  models.rs  websocket.rs
src/risk/: mod.rs  position_sizing.rs
src/strategy/: mod.rs  sma_crossover.rs  trait.rs
src/trading/: engine.rs  mod.rs
