[package]
name = "cryptobot"
version = "0.1.0"
edition = "2021"
description = "A secure, high-performance crypto trading bot"
authors = ["Cryptobot Team"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
url = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
